[tool.poetry]
name = "deepcrystet"
version = "0.1.0"
description = ""
authors = ["Hirofumi Tsuruta"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.1"
pandas = "^1.5.2"
sklearn = "0.0"
pyyaml = "^6.0"
torch = "^1.13.1"
tqdm = "^4.64.1"
black = "^22.12.0"
tensorboard = "^2.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ['py37', 'py38', 'py39']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''