[tool.poetry]
name = "deepcrystet_data"
version = "0.1.0"
description = ""
authors = ["Masaya Kumagai"]

[tool.poetry.dependencies]
python = "^3.8"
matminer = "^0.7.4"
pandas = "^1.4.2"
bokeh = "^2.4.2"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
